--- a/Notebooks/Final Project Section 1 - Team 1.ipynb
+++ b/Notebooks/Final Project Section 1 - Team 1.ipynb
@@ -31,6 +31,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03a2ad4e-fdaa-46a5-bb19-cbf4e4b48417",
+   "metadata": {},
+   "source": [
+    "## What is ARIMA?\n",
+    "\n",
+    "ARIMA stands for AutoRegressive Integrated Moving Average.\n",
+    "- Popular stats model used to forecast future values in a time series based on past values and errors.\n",
+    "\n",
+    "An ARIMA model is defined as ARIMA(p, d, q), where:\n",
+    "\n",
+    "- p (AutoRegressive): the number of past values (lags) the model uses to predict the future.\n",
+    "- d (Integrated): the number of times the data is differenced to remove trends and achieve stationarity.\n",
+    "- q (Moving Average): the number of past forecast errors the model uses to correct itself.\n",
+    "\n",
+    "\n",
+    "In this project, we attempt to forecast the monthly unemployment rate for the San Diego Metropolitan Statistical Area. We utilized ARIMA because:\n",
+    "- The raw unemployment rate shows a non-stationary trend.\n",
+    "- After differencing once (`d = 1`), the series becomes stationary.\n",
+    "- The ACF and PACF plots help identify appropriate values for `p` and `q`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0fb08242",
@@ -87,6 +110,20 @@
     "plt.plot(time_series)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f764ceb3-d5cf-4bd4-bdcc-01f347d11d5f",
+   "metadata": {},
+   "source": [
+    "This line graph displays the monthly unemployment rate in San Diego from 1990 to early 2025.\n",
+    "\n",
+    "We see two major spikes:\n",
+    "- 2008-2009 represents the Great Recession\n",
+    "- 2020 represents COVID-19\n",
+    "\n",
+    "Overall, the long-term trend remains generally cyclical. There are periods of high and low unemployment. This suggests that seasons and trends are present throughout. This is important for us when we decide whether ARIMA needs seasonal components or differencing."
    ]
   },
   {
@@ -202,6 +239,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5eb3773-79ce-43c9-9af4-b2f668654e88",
+   "metadata": {},
+   "source": [
+    "This line plot helps visualize how unemployment changes on a monthly basis. Specifically, it displays the volatility and the shifts in trends.\n",
+    "\n",
+    "We see that typically the fluctuations hover around 0. The large spikes in either direction represent sudden economic shifts. Sharp rises represent periods of job losses, and sharp drops represent rapid job recovery or even seasonal hiring. The largest spike represents the impact of COVID-19.\n",
+    "It also shows that there is no obvious trend throughout the time period, meaning it supports the stationarity of the differenced series hence why we used d=1 in the ARIMA model.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "id": "1a28f85d",
@@ -266,7 +314,6 @@
     }
    ],
    "source": [
-    "\"\"\"Really not sure what this is or why we care about it, o r why there are seemingly two plots of the same data...\"\"\"\n",
     "# TODO: research and provide information about this cell above\n",
     "decompose_dataset = pd.DataFrame({\"change\": san_diego[\"change\"], \"date\": pd.to_datetime(san_diego.index)})\n",
     "decompose_dataset = decompose_dataset.set_index(\"date\")\n",
@@ -276,6 +323,20 @@
     "seasonal = pd.DataFrame(decomposition.seasonal)\n",
     "residual = pd.DataFrame(decomposition.resid)\n",
     "decomposition.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fce637b-0382-4ffb-bb5d-329bebbed113",
+   "metadata": {},
+   "source": [
+    "The above plots arent used directly in ARIMA but simply help us visualize the data to gain a better understanding of seasons trends and residuals.\n",
+    "\n",
+    "Trend: Seems to be flat, with periods of a moderate slope. Shows little long-term drift after differencing\n",
+    "Seasonal: Appears to have repetitive behaviour showing monthly seasonality\n",
+    "Residual: Random patterns\n",
+    "\n",
+    "The main takeaway is that there is some seasonality, but not enough to require a SARIMA model."
    ]
   },
   {
@@ -313,6 +374,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8a4d3f9-6173-42b9-9d3b-14881c6ed11b",
+   "metadata": {},
+   "source": [
+    "The Autocorrelation Function shows us how a time series correlates to its own lagged values. The stronger the correlation between the current value and its past values, the higher the autocrrelation.\n",
+    "\n",
+    "We see significant spikes at lags 1,2,3, and 12. The lag 12 spike shows seasonality in yearly intervals.\n",
+    "\n",
+    "This helps support our selection of the q parameter in ARIMA - 13"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 125,
    "id": "9126a10b",
@@ -344,6 +417,18 @@
     "\"\"\"Plot the Partial Autocorrelation Function\"\"\"\n",
     "# TODO: figure out what this tells us and how we can optimize for the best number of \"lags\"\n",
     "plot_pacf(san_diego[\"change\"], lags = 40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64565884-41c5-4ef7-a16c-3d2596248411",
+   "metadata": {},
+   "source": [
+    "The Partial Autocorrelation Function shows the correlation between the time series and its lagged values after taking away the short lags. This helps us determine the p value.\n",
+    "\n",
+    "We see a sharp drop after lag 1 with multiple spikes up until lag 20. This shows us it is a autogressive structure because the value o a time series is dependent on its past values.\n",
+    "\n",
+    "This led us to select p = 20."
    ]
   },
   {
@@ -437,50 +522,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3a8a9f2-60a1-4af2-bb51-8ba8c689ce0b",
+   "metadata": {},
+   "source": [
+    "## SO SORRY I was added comments and accidentally hit run ona  cell below. That erased the outputs. I dont have time to rerun everything + also dont want to risk losing what we already have. We will need to fix this and figure out how to get the next model to have predicted vs actual values!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5f68d4de",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/poppop/.local/lib/python3.10/site-packages/statsmodels/tsa/base/tsa_model.py:473: ValueWarning: No frequency information was provided, so inferred frequency MS will be used.\n",
-      "  self._init_dates(dates, freq)\n",
-      "/home/poppop/.local/lib/python3.10/site-packages/statsmodels/tsa/statespace/sarimax.py:966: UserWarning: Non-stationary starting autoregressive parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-stationary starting autoregressive parameters'\n",
-      "/home/poppop/.local/lib/python3.10/site-packages/statsmodels/tsa/statespace/sarimax.py:978: UserWarning: Non-invertible starting MA parameters found. Using zeros as starting parameters.\n",
-      "  warn('Non-invertible starting MA parameters found.'\n",
-      "/home/poppop/.local/lib/python3.10/site-packages/statsmodels/base/model.py:607: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
-      "  warnings.warn(\"Maximum Likelihood optimization failed to \"\n"
+     "ename": "NameError",
+     "evalue": "name 'ARIMA' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;124;03m\"\"\"Fit arima model (using rate data instead of change even though we said we would be using change... ??)\"\"\"\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# TODO: Order is p, d, q -> no idea what they are for, nor how to optimize them\u001b[39;00m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m#added some descriptions above to detail it!\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# TODO: fix warinings\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# TODO: Determine if rate or change is most appropriate\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m arima \u001b[38;5;241m=\u001b[39m ARIMA(san_diego_train[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrate\u001b[39m\u001b[38;5;124m\"\u001b[39m], order\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m20\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m13\u001b[39m), freq\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mfit()\n\u001b[1;32m      7\u001b[0m train_preds \u001b[38;5;241m=\u001b[39m arima\u001b[38;5;241m.\u001b[39mpredict()\n\u001b[1;32m      8\u001b[0m train_preds\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ARIMA' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1990-02-01    0.000000\n",
-       "1990-03-01    3.800000\n",
-       "1990-04-01    3.700042\n",
-       "1990-05-01    3.902198\n",
-       "1990-06-01    4.110006\n",
-       "                ...   \n",
-       "2023-12-01    3.719732\n",
-       "2024-01-01    4.404876\n",
-       "2024-02-01    4.003990\n",
-       "2024-03-01    4.173623\n",
-       "2024-04-01    4.386465\n",
-       "Freq: MS, Name: predicted_mean, Length: 411, dtype: float64"
-      ]
-     },
-     "execution_count": 130,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "\"\"\"Fit arima model (using rate data instead of change even though we said we would be using change... ??)\"\"\"\n",
     "# TODO: Order is p, d, q -> no idea what they are for, nor how to optimize them\n",
+    "    #added some descriptions above to detail it!\n",
     "# TODO: fix warinings\n",
     "# TODO: Determine if rate or change is most appropriate\n",
     "arima = ARIMA(san_diego_train[\"rate\"], order=(20,1,13), freq=\"MS\").fit()\n",
@@ -570,6 +640,14 @@
     "\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e14e16-143f-436b-a177-360a0501fa8c",
+   "metadata": {},
+   "source": [
+    "Above is the forecasted unemployment rates for the next 13 months"
    ]
   },
   {
@@ -1062,7 +1140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1076,7 +1154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
