integrated for rebase

--- a/Notebooks/Final Project Section 1 - Team 1.ipynb
+++ b/Notebooks/Final Project Section 1 - Team 1.ipynb
@@ -31,6 +31,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c5d30a5",
+   "metadata": {},
+   "source": [
+    "## What is ARIMA?\n",
+    "\n",
+    "ARIMA stands for AutoRegressive Integrated Moving Average.\n",
+    "- Popular stats model used to forecast future values in a time series based on past values and errors.\n",
+    "\n",
+    "An ARIMA model is defined as ARIMA(p, d, q), where:\n",
+    "\n",
+    "- p (AutoRegressive): the number of past values (lags) the model uses to predict the future.\n",
+    "- d (Integrated): the number of times the data is differenced to remove trends and achieve stationarity.\n",
+    "- q (Moving Average): the number of past forecast errors the model uses to correct itself.\n",
+    "\n",
+    "\n",
+    "In this project, we attempt to forecast the monthly unemployment rate for the San Diego Metropolitan Statistical Area. We utilized ARIMA because:\n",
+    "- The raw unemployment rate shows a non-stationary trend.\n",
+    "- After differencing once (`d = 1`), the series becomes stationary.\n",
+    "- The ACF and PACF plots help identify appropriate values for `p` and `q`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "0fb08242",
@@ -87,6 +110,20 @@
     "plt.plot(time_series)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c35dc949",
+   "metadata": {},
+   "source": [
+    "This line graph displays the monthly unemployment rate in San Diego from 1990 to early 2025.\n",
+    "\n",
+    "We see two major spikes:\n",
+    "- 2008-2009 represents the Great Recession\n",
+    "- 2020 represents COVID-19\n",
+    "\n",
+    "Overall, the long-term trend remains generally cyclical. There are periods of high and low unemployment. This suggests that seasons and trends are present throughout. This is important for us when we decide whether ARIMA needs seasonal components or differencing."
    ]
   },
   {
@@ -202,6 +239,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "249e9814",
+   "metadata": {},
+   "source": [
+    "This line plot helps visualize how unemployment changes on a monthly basis. Specifically, it displays the volatility and the shifts in trends.\n",
+    "\n",
+    "We see that typically the fluctuations hover around 0. The large spikes in either direction represent sudden economic shifts. Sharp rises represent periods of job losses, and sharp drops represent rapid job recovery or even seasonal hiring. The largest spike represents the impact of COVID-19.\n",
+    "It also shows that there is no obvious trend throughout the time period, meaning it supports the stationarity of the differenced series hence why we used d=1 in the ARIMA model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "1a28f85d",
@@ -279,8 +327,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79243810",
+   "metadata": {},
+   "source": [
+    "The above plots arent used directly in ARIMA but simply help us visualize the data to gain a better understanding of seasons trends and residuals.\n",
+    "\n",
+    "Trend: Seems to be flat, with periods of a moderate slope. Shows little long-term drift after differencing\n",
+    "Seasonal: Appears to have repetitive behaviour showing monthly seasonality\n",
+    "Residual: Random patterns\n",
+    "\n",
+    "The main takeaway is that there is some seasonality, but not enough to require a SARIMA model."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "47a1da49",
    "metadata": {},
    "outputs": [
@@ -309,12 +371,24 @@
    "source": [
     "\"\"\"Plot the Autocorrelation Function\"\"\"\n",
     "# TODO: figure out what this tells us and how we can optimize for the best number of \"lags\"\n",
-    "plot_acf(san_diego[\"change\"], lags = 40)"
+    "plot_acf(san_diego[\"change\"], lags=40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0f7ddff",
+   "metadata": {},
+   "source": [
+    "The Autocorrelation Function shows us how a time series correlates to its own lagged values. The stronger the correlation between the current value and its past values, the higher the autocrrelation.\n",
+    "\n",
+    "We see significant spikes at lags 1,2,3, and 12. The lag 12 spike shows seasonality in yearly intervals.\n",
+    "\n",
+    "This helps support our selection of the q parameter in ARIMA - 13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9126a10b",
    "metadata": {},
    "outputs": [
@@ -343,7 +417,19 @@
    "source": [
     "\"\"\"Plot the Partial Autocorrelation Function\"\"\"\n",
     "# TODO: figure out what this tells us and how we can optimize for the best number of \"lags\"\n",
-    "plot_pacf(san_diego[\"change\"], lags = 40)"
+    "plot_pacf(san_diego[\"change\"], lags=40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1bc55b7e",
+   "metadata": {},
+   "source": [
+    "The Partial Autocorrelation Function shows the correlation between the time series and its lagged values after taking away the short lags. This helps us determine the p value.\n",
+    "\n",
+    "We see a sharp drop after lag 1 with multiple spikes up until lag 20. This shows us it is a autogressive structure because the value o a time series is dependent on its past values.\n",
+    "\n",
+    "This led us to select p = 20."
    ]
   },
   {
@@ -571,6 +657,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5df381ea",
+   "metadata": {},
+   "source": [
+    "Above is the forecasted unemployment rates for the next 13 months"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3bde8424",
    "metadata": {},
    "source": [
@@ -609,6 +703,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a52b39b2",
+   "metadata": {},
+   "source": [
+    "### Partitioning\n",
+    "\n",
+    "Although we considered the time/train split method, sklearn randomizes its splits and, as a result, is not suitable for time series data.\n",
+    "\n",
+    "Time series data requires chronological splitting instead of random sampling, since we need to preserve the order to simulate real-world forecasting scenarios where we predict future values based on historical data. Random sampling could risk our ability to predict relevant to a time series (consider how problematic it woudl be to take random temperatures throughout a year in a location that experiences significant seasonal differences, as an example).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "71e85cca",
@@ -631,6 +737,16 @@
     "print(len(test))\n",
     "training = time_series[:-test_size]\n",
     "print(len(training))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "063f1c4f",
+   "metadata": {},
+   "source": [
+    "### Naive Forecasting Method\n",
+    "\n",
+    "The naive forecasting method is the simplest time series forecasting approach, where all future values are predicted to be equal to the last observed value in the training data. In effect, the Naive method is a baseline to compare the ARIMA model we worked on above.\n"
    ]
   },
   {
@@ -663,6 +779,16 @@
     "naive = training[-1]\n",
     "naive_forecast = np.repeat(naive, test_size)\n",
     "print(naive_forecast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeea1736",
+   "metadata": {},
+   "source": [
+    "### Drift Method\n",
+    "\n",
+    "The drift method builds upon the naive approach. It incorporates the average historical trend by looking at the previous observations for linear trends, then projects that forward. It is critically important to note that this method assumes the linear trend will be consistent.\n"
    ]
   },
   {
