Readying files for final presentation.  Still need DeepAR work

--- a/Notebooks/Final Project Section 1 - Team 1.ipynb
+++ b/Notebooks/Final Project Section 1 - Team 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "id": "35686d6a",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "id": "0fb08242",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "00556caf",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "id": "f147c63c",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "1990-06-01   4.5     0.4"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "id": "636ab49b",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "1a28f85d",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "id": "9078ae49",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "id": "47a1da49",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "id": "9126a10b",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "634f472e",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "2024-04-01   3.8    -0.3"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "5f68d4de",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "id": "2ec2c2da",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
        "Freq: MS, Name: predicted_mean, Length: 411, dtype: float64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "id": "b659e74b",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
        "12"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "id": "710d7d7a",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "0227dfd5",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "id": "c898009a",
    "metadata": {},
    "outputs": [
@@ -703,7 +703,7 @@
    "id": "3bde8424",
    "metadata": {},
    "source": [
-    "## Various methodologies as outlined in [web resource](https://unravelthedata.com/time-series-forecasting-with-unemployment-data/)"
+    "## Various methodologies to compare against"
    ]
   },
   {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "id": "71e85cca",
    "metadata": {},
    "outputs": [
@@ -728,15 +728,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "84\n",
-      "340\n"
+      "12\n",
+      "412\n"
      ]
     }
    ],
    "source": [
     "# Partitioning\n",
     "# The time/train split method from sklearn's train_test_split is not suitable for time series data, it randomizes things.\n",
-    "test_size = max(int(len(time_series) * 0.2), 4)\n",
+    "test_size = max(int(len(time_series) * 0.02), 12)\n",
     "test = time_series[-test_size:]\n",
     "print(len(test))\n",
     "training = time_series[:-test_size]\n",
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "id": "a675b114",
    "metadata": {},
    "outputs": [
@@ -766,17 +766,14 @@
      "output_type": "stream",
      "text": [
       "Naive Method Results:\n",
-      "  Last training value: 3.00\n",
-      "  Forecast (constant): 3.00\n",
-      "  All predictions: [3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3.\n",
-      " 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3.\n",
-      " 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3.\n",
-      " 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3. 3.]\n",
+      "  Last training value: 3.80\n",
+      "  Forecast (constant): 3.80\n",
+      "  All predictions: [3.8 3.8 3.8 3.8 3.8 3.8 3.8 3.8 3.8 3.8 3.8 3.8]\n",
       "\n",
       "Naive Method Accuracy:\n",
-      "  MAE (Mean Absolute Error): 1.861\n",
-      "  MSE (Mean Squared Error): 10.384\n",
-      "  RMSE (Root Mean Squared Error): 3.222\n"
+      "  MAE (Mean Absolute Error): 0.600\n",
+      "  MSE (Mean Squared Error): 0.430\n",
+      "  RMSE (Root Mean Squared Error): 0.656\n"
      ]
     }
    ],
@@ -821,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "id": "3e288c5a",
    "metadata": {},
    "outputs": [
@@ -831,29 +828,17 @@
      "text": [
       "Drift Method Results:\n",
       "  Training start value: 4.00\n",
-      "  Training end value: 3.00\n",
-      "  Training periods: 340\n",
-      "  Drift per period: -0.0029\n",
+      "  Training end value: 3.80\n",
+      "  Training periods: 412\n",
+      "  Drift per period: -0.0005\n",
       "  Drift predictions: \n",
-      "[2.99705015 2.99410029 2.99115044 2.98820059 2.98525074 2.98230088\n",
-      " 2.97935103 2.97640118 2.97345133 2.97050147 2.96755162 2.96460177\n",
-      " 2.96165192 2.95870206 2.95575221 2.95280236 2.94985251 2.94690265\n",
-      " 2.9439528  2.94100295 2.9380531  2.93510324 2.93215339 2.92920354\n",
-      " 2.92625369 2.92330383 2.92035398 2.91740413 2.91445428 2.91150442\n",
-      " 2.90855457 2.90560472 2.90265487 2.89970501 2.89675516 2.89380531\n",
-      " 2.89085546 2.8879056  2.88495575 2.8820059  2.87905605 2.87610619\n",
-      " 2.87315634 2.87020649 2.86725664 2.86430678 2.86135693 2.85840708\n",
-      " 2.85545723 2.85250737 2.84955752 2.84660767 2.84365782 2.84070796\n",
-      " 2.83775811 2.83480826 2.83185841 2.82890855 2.8259587  2.82300885\n",
-      " 2.820059   2.81710914 2.81415929 2.81120944 2.80825959 2.80530973\n",
-      " 2.80235988 2.79941003 2.79646018 2.79351032 2.79056047 2.78761062\n",
-      " 2.78466077 2.78171091 2.77876106 2.77581121 2.77286136 2.7699115\n",
-      " 2.76696165 2.7640118  2.76106195 2.75811209 2.75516224 2.75221239]\n",
+      "[3.79951338 3.79902676 3.79854015 3.79805353 3.79756691 3.79708029\n",
+      " 3.79659367 3.79610706 3.79562044 3.79513382 3.7946472  3.79416058]\n",
       "\n",
       "Drift Method Accuracy:\n",
-      "  MAE (Mean Absolute Error): 1.978\n",
-      "  MSE (Mean Standard Error): 10.824\n",
-      "  RMSE (Root Mean Squared Error): 3.290\n"
+      "  MAE (Mean Absolute Error): 0.603\n",
+      "  MSE (Mean Standard Error): 0.433\n",
+      "  RMSE (Root Mean Squared Error): 0.658\n"
      ]
     }
    ],
@@ -914,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "id": "a8e9c800",
    "metadata": {},
    "outputs": [
@@ -923,28 +908,16 @@
      "output_type": "stream",
      "text": [
       "Simple Average Method Results:\n",
-      "  Historical Mean: 5.91\n",
-      "  Forecast (Constant): 5.91\n",
+      "  Historical Mean: 5.74\n",
+      "  Forecast (Constant): 5.74\n",
       "  All Predictions:\n",
-      "[5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235\n",
-      " 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235 5.91088235]\n",
+      "[5.7368932 5.7368932 5.7368932 5.7368932 5.7368932 5.7368932 5.7368932\n",
+      " 5.7368932 5.7368932 5.7368932 5.7368932 5.7368932]\n",
       "\n",
       "Simple Average Method Accuracy:\n",
-      "  MAE (Mean Absolute Error): 2.424\n",
-      "  MSE (Mean Squared Error): 8.163\n",
-      "  RMSE (Root Mean Squared Error): 2.857\n"
+      "  MAE (Mean Absolute Error): 1.370\n",
+      "  MSE (Mean Squared Error): 1.986\n",
+      "  RMSE (Root Mean Squared Error): 1.409\n"
      ]
     }
    ],
@@ -988,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "id": "c279767b",
    "metadata": {},
    "outputs": [
@@ -997,24 +970,25 @@
      "output_type": "stream",
      "text": [
       "Exponential Smoothing Method Results:\n",
-      "  Smoothing parameter (alpha): 0.956\n",
-      "  Forecast values: 2018-05-01    3.013729\n",
-      "2018-06-01    3.013729\n",
-      "2018-07-01    3.013729\n",
-      "2018-08-01    3.013729\n",
-      "2018-09-01    3.013729\n",
-      "                ...   \n",
-      "2024-12-01    3.013729\n",
-      "2025-01-01    3.013729\n",
-      "2025-02-01    3.013729\n",
-      "2025-03-01    3.013729\n",
-      "2025-04-01    3.013729\n",
-      "Freq: MS, Length: 84, dtype: float64\n",
+      "  Smoothing parameter (alpha): 1.000\n",
+      "  Forecast values: 2024-05-01    3.8\n",
+      "2024-06-01    3.8\n",
+      "2024-07-01    3.8\n",
+      "2024-08-01    3.8\n",
+      "2024-09-01    3.8\n",
+      "2024-10-01    3.8\n",
+      "2024-11-01    3.8\n",
+      "2024-12-01    3.8\n",
+      "2025-01-01    3.8\n",
+      "2025-02-01    3.8\n",
+      "2025-03-01    3.8\n",
+      "2025-04-01    3.8\n",
+      "Freq: MS, dtype: float64\n",
       "\n",
       "Exponential Smoothing Method Accuracy:\n",
-      "  MAE (Mean Absolute Error): 1.850\n",
-      "  MSE (Mean Squared Error): 10.334\n",
-      "  RMSE (Root Mean Squared Error): 3.215\n"
+      "  MAE (Mean Absolute Error): 0.600\n",
+      "  MSE (Mean Squared Error): 0.430\n",
+      "  RMSE (Root Mean Squared Error): 0.656\n"
      ]
     }
    ],
@@ -1050,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "id": "aa9adba5",
    "metadata": {},
    "outputs": [
@@ -1059,26 +1033,27 @@
      "output_type": "stream",
      "text": [
       "Holt Method Results:\n",
-      "  Alpha (level): 0.912\n",
-      "  Beta (trend): 0.057\n",
+      "  Alpha (level): 1.000\n",
+      "  Beta (trend): 0.011\n",
       "  Forecast values:\n",
-      "2018-05-01    2.938271\n",
-      "2018-06-01    2.855288\n",
-      "2018-07-01    2.772305\n",
-      "2018-08-01    2.689322\n",
-      "2018-09-01    2.606339\n",
-      "                ...   \n",
-      "2024-12-01   -3.617390\n",
-      "2025-01-01   -3.700373\n",
-      "2025-02-01   -3.783356\n",
-      "2025-03-01   -3.866339\n",
-      "2025-04-01   -3.949322\n",
-      "Freq: MS, Length: 84, dtype: float64\n",
+      "2024-05-01    3.780189\n",
+      "2024-06-01    3.760378\n",
+      "2024-07-01    3.740566\n",
+      "2024-08-01    3.720755\n",
+      "2024-09-01    3.700944\n",
+      "2024-10-01    3.681133\n",
+      "2024-11-01    3.661321\n",
+      "2024-12-01    3.641510\n",
+      "2025-01-01    3.621699\n",
+      "2025-02-01    3.601888\n",
+      "2025-03-01    3.582076\n",
+      "2025-04-01    3.562265\n",
+      "Freq: MS, dtype: float64\n",
       "\n",
       "Holt Method Accuracy:\n",
-      "  MAE (Mean Absolute Error): 5.346\n",
-      "  MSE (Mean Squared Error): 38.417\n",
-      "  RMSE (Root Mean Squared Error): 6.198\n"
+      "  MAE (Mean Absolute Error): 0.725\n",
+      "  MSE (Mean Squared Error): 0.593\n",
+      "  RMSE (Root Mean Squared Error): 0.770\n"
      ]
     }
    ],
@@ -1116,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "id": "52d4e4d1",
    "metadata": {},
    "outputs": [
@@ -1125,26 +1100,14 @@
      "output_type": "stream",
      "text": [
       "SMA Method Results:\n",
-      "  Forecast (constant): 5.99\n",
-      "  All predictions: [5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293\n",
-      " 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293 5.99268293]\n",
+      "  Forecast (constant): 5.79\n",
+      "  All predictions: [5.7905 5.7905 5.7905 5.7905 5.7905 5.7905 5.7905 5.7905 5.7905 5.7905\n",
+      " 5.7905 5.7905]\n",
       "\n",
       "sma Method Accuracy:\n",
-      "  MAE (Mean Absolute Error): 2.473\n",
-      "  MSE (Mean Squared Error): 8.346\n",
-      "  RMSE (Root Mean Squared Error): 2.889\n"
+      "  MAE (Mean Absolute Error): 1.424\n",
+      "  MSE (Mean Squared Error): 2.136\n",
+      "  RMSE (Root Mean Squared Error): 1.462\n"
      ]
     }
    ],
