Added MAPE calculation for all models

--- a/Notebooks/Final Project Section 1 - Team 1.ipynb
+++ b/Notebooks/Final Project Section 1 - Team 1.ipynb
@@ -24,6 +24,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65fbf1ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Custom function for calculating MAPE as found at https://vitalflux.com/mse-vs-rmse-vs-mae-vs-mape-vs-r-squared-when-to-use/\"\"\"\n",
+    "def calculate_mape(y_true, y_pred):\n",
+    "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
+    "    non_zero_mask = y_true != 0\n",
+    "    return np.mean(np.abs((y_true[non_zero_mask] - y_pred[non_zero_mask]) / y_true[non_zero_mask])) * 100"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ca06848a",
    "metadata": {},
@@ -56,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0fb08242",
    "metadata": {},
    "outputs": [
@@ -86,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "00556caf",
    "metadata": {},
    "outputs": [
@@ -129,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f147c63c",
    "metadata": {},
    "outputs": [
@@ -203,7 +217,7 @@
        "1990-06-01   4.5     0.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "636ab49b",
    "metadata": {},
    "outputs": [
@@ -255,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1a28f85d",
    "metadata": {},
    "outputs": [
@@ -291,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9078ae49",
    "metadata": {},
    "outputs": [
@@ -335,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "47a1da49",
    "metadata": {},
    "outputs": [
@@ -370,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9126a10b",
    "metadata": {},
    "outputs": [
@@ -405,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "634f472e",
    "metadata": {},
    "outputs": [
@@ -479,7 +493,7 @@
        "2024-04-01   3.8    -0.3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5f68d4de",
    "metadata": {},
    "outputs": [
@@ -545,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2ec2c2da",
    "metadata": {},
    "outputs": [
@@ -566,7 +580,7 @@
        "Freq: MS, Name: predicted_mean, Length: 411, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "b659e74b",
    "metadata": {},
    "outputs": [
@@ -590,7 +604,7 @@
        "12"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "710d7d7a",
    "metadata": {},
    "outputs": [
@@ -633,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "0227dfd5",
    "metadata": {},
    "outputs": [
@@ -671,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "c898009a",
    "metadata": {},
    "outputs": [
@@ -682,20 +696,23 @@
       "ARIMA Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 0.578\n",
       "  MSE (Mean Standard Error): 0.488\n",
-      "  RMSE (Root Mean Squared Error): 0.699\n"
+      "  RMSE (Root Mean Squared Error): 0.699\n",
+      "  MAPE (Mean Absolute Percentage Error): 12.745\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Calculate a few error statistics for the predictions\"\"\"\n",
-    "arima_mae = mean_absolute_error(san_diego_test[\"rate\"], test_preds) # Calculate Mean Absolute Error via ARIMA Method\n",
-    "arima_mse = mean_squared_error(san_diego_test[\"rate\"], test_preds) # Calculate Mean Squared Error via ARIMA Method\n",
-    "arima_rmse = np.sqrt(arima_mse) # Calculate Root Mean Squared Error via ARIMA Method\n",
+    "arima_mae = mean_absolute_error(san_diego_test[\"rate\"], test_preds) # Calculate Mean Absolute Error for ARIMA Method\n",
+    "arima_mse = mean_squared_error(san_diego_test[\"rate\"], test_preds) # Calculate Mean Squared Error for ARIMA Method\n",
+    "arima_rmse = np.sqrt(arima_mse) # Calculate Root Mean Squared Error for ARIMA Method\n",
+    "arima_mape = calculate_mape(san_diego_test[\"rate\"], test_preds) # Calculate Mean Absolute Percentage Error for ARIMA Method\n",
     "\n",
     "print(f\"ARIMA Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {arima_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Standard Error): {arima_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {arima_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {arima_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {arima_mape:.3f}\")"
    ]
   },
   {
@@ -773,7 +790,8 @@
       "Naive Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 0.600\n",
       "  MSE (Mean Squared Error): 0.430\n",
-      "  RMSE (Root Mean Squared Error): 0.656\n"
+      "  RMSE (Root Mean Squared Error): 0.656\n",
+      "  MAPE (Mean Absolute Percentage Error): 13.372\n"
      ]
     }
    ],
@@ -799,11 +817,13 @@
     "naive_mae = mean_absolute_error(test, naive_predictions) # Calculate Mean Absolute Error\n",
     "naive_mse = mean_squared_error(test, naive_predictions) # Calculate Mean Squared Error\n",
     "naive_rmse = np.sqrt(naive_mse) # Calculate Root Mean Squared Error\n",
+    "naive_mape = calculate_mape(test, naive_predictions) # Calculate Mean Absolute Percentage Error for Naive Method\n",
     "\n",
     "print(f\"\\nNaive Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {naive_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Squared Error): {naive_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {naive_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {naive_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {naive_mape:.3f}\")"
    ]
   },
   {
@@ -838,7 +858,8 @@
       "Drift Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 0.603\n",
       "  MSE (Mean Standard Error): 0.433\n",
-      "  RMSE (Root Mean Squared Error): 0.658\n"
+      "  RMSE (Root Mean Squared Error): 0.658\n",
+      "  MAPE (Mean Absolute Percentage Error): 13.442\n"
      ]
     }
    ],
@@ -880,11 +901,13 @@
     "drift_mae = mean_absolute_error(test, drift_predictions) # Calculate Mean Absolute Error via Drift Method\n",
     "drift_mse = mean_squared_error(test, drift_predictions) # Calculate Mean Squared Error via Drift Method\n",
     "drift_rmse = np.sqrt(drift_mse) # Calculate Root Mean Squared Error via Drift Method\n",
+    "drift_mape = calculate_mape(test, drift_predictions) # Calculate Mean Absolute Percentage Error for Drift Method\n",
     "\n",
     "print(f\"\\nDrift Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {drift_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Standard Error): {drift_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {drift_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {drift_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {drift_mape:.3f}\")"
    ]
   },
   {
@@ -917,7 +940,8 @@
       "Simple Average Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 1.370\n",
       "  MSE (Mean Squared Error): 1.986\n",
-      "  RMSE (Root Mean Squared Error): 1.409\n"
+      "  RMSE (Root Mean Squared Error): 1.409\n",
+      "  MAPE (Mean Absolute Percentage Error): 32.181\n"
      ]
     }
    ],
@@ -942,11 +966,13 @@
     "avg_mae = mean_absolute_error(test, avg_predictions)  # Calculate Mean Absolute Error\n",
     "avg_mse = mean_squared_error(test, avg_predictions)  # Calculate Mean Squared Error\n",
     "avg_rmse = np.sqrt(avg_mse)  # Calculate Root Mean Squared Error\n",
+    "avg_mape = calculate_mape(test, avg_predictions) # Calculate Mean Absolute Percentage Error for Simple Average Method\n",
     "\n",
     "print(f\"\\nSimple Average Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {avg_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Squared Error): {avg_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {avg_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {avg_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {avg_mape:.3f}\")"
    ]
   },
   {
@@ -988,7 +1014,8 @@
       "Exponential Smoothing Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 0.600\n",
       "  MSE (Mean Squared Error): 0.430\n",
-      "  RMSE (Root Mean Squared Error): 0.656\n"
+      "  RMSE (Root Mean Squared Error): 0.656\n",
+      "  MAPE (Mean Absolute Percentage Error): 13.372\n"
      ]
     }
    ],
@@ -1005,11 +1032,13 @@
     "smoothing_mae = mean_absolute_error(test, smoothing_forecast) # Calculate Mean Absolute Error\n",
     "smoothing_mse = mean_squared_error(test, smoothing_forecast) # Calculate Mean Squared Error\n",
     "smoothing_rmse = np.sqrt(smoothing_mse) # Calculate Root Mean Squared Error\n",
+    "smoothing_mape = calculate_mape(test, smoothing_forecast) # Calculate Mean Absolute Percentage Error\n",
     "\n",
     "print(f\"\\nExponential Smoothing Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {smoothing_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Squared Error): {smoothing_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {smoothing_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {smoothing_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {smoothing_mape:.3f}\")"
    ]
   },
   {
@@ -1053,7 +1082,8 @@
       "Holt Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 0.725\n",
       "  MSE (Mean Squared Error): 0.593\n",
-      "  RMSE (Root Mean Squared Error): 0.770\n"
+      "  RMSE (Root Mean Squared Error): 0.770\n",
+      "  MAPE (Mean Absolute Percentage Error): 16.251\n"
      ]
     }
    ],
@@ -1072,11 +1102,13 @@
     "holt_mae = mean_absolute_error(test, holt_forecast) # Calculate Mean Absolute Error\n",
     "holt_mse = mean_squared_error(test, holt_forecast) # Calculate Mean Squared Error\n",
     "holt_rmse = np.sqrt(holt_mse) # Calculate Root Mean Squared Error\n",
+    "holt_mape = calculate_mape(test, holt_forecast) # Calculate Mean Absolute Percentage Error\n",
     "\n",
     "print(f\"\\nHolt Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {holt_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Squared Error): {holt_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {holt_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {holt_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {holt_mape:.3f}\")"
    ]
   },
   {
@@ -1107,7 +1139,8 @@
       "sma Method Accuracy:\n",
       "  MAE (Mean Absolute Error): 1.424\n",
       "  MSE (Mean Squared Error): 2.136\n",
-      "  RMSE (Root Mean Squared Error): 1.462\n"
+      "  RMSE (Root Mean Squared Error): 1.462\n",
+      "  MAPE (Mean Absolute Percentage Error): 33.416\n"
      ]
     }
    ],
@@ -1131,11 +1164,13 @@
     "sma_mae = mean_absolute_error(test, sma_predictions) # Calculate Mean Absolute Error\n",
     "sma_mse = mean_squared_error(test, sma_predictions) # Calculate Mean Squared Error\n",
     "sma_rmse = np.sqrt(sma_mse) # Calculate Root Mean Squared Error\n",
+    "sma_mape = calculate_mape(test, sma_predictions) # Calculate Mean Absolute Percentage Error\n",
     "\n",
     "print(f\"\\nsma Method Accuracy:\")\n",
     "print(f\"  MAE (Mean Absolute Error): {sma_mae:.3f}\")\n",
     "print(f\"  MSE (Mean Squared Error): {sma_mse:.3f}\")\n",
-    "print(f\"  RMSE (Root Mean Squared Error): {sma_rmse:.3f}\")"
+    "print(f\"  RMSE (Root Mean Squared Error): {sma_rmse:.3f}\")\n",
+    "print(f\"  MAPE (Mean Absolute Percentage Error): {sma_mape:.3f}\")"
    ]
   }
  ],
